hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__simple_boolean_relation_filter@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
1v1 = merge ();
2v1 = unique :: < 'tick > ();
3v1 = tee ();
4v1 = merge ();
5v1 = unique :: < 'tick > ();
6v1 = tee ();
7v1 = source_stream (input);
8v1 = for_each (| v | out . send (v) . unwrap ());
9v1 = filter (| row : & (_ , _ ,) | row . 0 > row . 1 && row . 1 == row . 0);
10v1 = map (| row : (_ , _ ,) | (row . 0 , row . 1 ,));

2v1 -> 3v1;
1v1 -> 2v1;
5v1 -> 6v1;
4v1 -> 5v1;
7v1 -> 1v1;
6v1 -> 8v1;
3v1 -> 9v1;
10v1 -> 4v1;
9v1 -> 10v1;

