hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__simple_filter@datalog_program.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: "prettyplease::unparse(&wrapped)"
---
fn main() {
    {
        {
            use hydroflow::{var_expr, var_args};
            let mut df = hydroflow::scheduled::graph::Hydroflow::new_with_graph(
                "{\"nodes\":[{\"value\":null,\"version\":0},{\"value\":\"merge ()\",\"version\":1},{\"value\":\"unique :: < 'tick > ()\",\"version\":1},{\"value\":\"tee ()\",\"version\":1},{\"value\":\"merge ()\",\"version\":1},{\"value\":\"unique :: < 'tick > ()\",\"version\":1},{\"value\":\"tee ()\",\"version\":1},{\"value\":\"source_stream (input)\",\"version\":1},{\"value\":\"for_each (| v | out . send (v) . unwrap ())\",\"version\":1},{\"value\":\"filter (| & row : & (_ , _ ,) | row . 0 > row . 1 && row . 1 == row . 0)\",\"version\":1},{\"value\":\"map (| row : (_ , _ ,) | (row . 0 , row . 1 ,))\",\"version\":1}],\"node_color_map\":[{\"value\":null,\"version\":0},{\"value\":\"Pull\",\"version\":1},{\"value\":\"Pull\",\"version\":1},{\"value\":\"Pull\",\"version\":1},{\"value\":\"Push\",\"version\":1},{\"value\":\"Push\",\"version\":1},{\"value\":\"Push\",\"version\":1},{\"value\":\"Pull\",\"version\":1},{\"value\":\"Push\",\"version\":1},{\"value\":\"Push\",\"version\":1},{\"value\":\"Push\",\"version\":1}],\"edges\":[{\"value\":null,\"version\":0},{\"value\":[{\"src\":{\"idx\":1,\"version\":1},\"dst\":{\"idx\":2,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":2,\"version\":1},\"dst\":{\"idx\":3,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":3,\"version\":1},\"dst\":{\"idx\":9,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":4,\"version\":1},\"dst\":{\"idx\":5,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":5,\"version\":1},\"dst\":{\"idx\":6,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":6,\"version\":1},\"dst\":{\"idx\":8,\"version\":1},\"blocking\":false,\"label\":\"0\"}],\"version\":1},{\"value\":[{\"src\":{\"idx\":7,\"version\":1},\"dst\":{\"idx\":1,\"version\":1},\"blocking\":false,\"label\":\"0\"}],\"version\":1},{\"value\":null,\"version\":0},{\"value\":[{\"src\":{\"idx\":9,\"version\":1},\"dst\":{\"idx\":10,\"version\":1},\"blocking\":false,\"label\":null}],\"version\":1},{\"value\":[{\"src\":{\"idx\":10,\"version\":1},\"dst\":{\"idx\":4,\"version\":1},\"blocking\":false,\"label\":\"0\"}],\"version\":1}],\"barrier_handoffs\":[{\"value\":null,\"version\":0}],\"subgraph_nodes\":[{\"value\":null,\"version\":0},{\"value\":[{\"idx\":7,\"version\":1},{\"idx\":1,\"version\":1},{\"idx\":2,\"version\":1},{\"idx\":3,\"version\":1},{\"idx\":9,\"version\":1},{\"idx\":10,\"version\":1},{\"idx\":4,\"version\":1},{\"idx\":5,\"version\":1},{\"idx\":6,\"version\":1},{\"idx\":8,\"version\":1}],\"version\":1}],\"subgraph_stratum\":[{\"value\":null,\"version\":0},{\"value\":0,\"version\":1}],\"subgraph_internal_handoffs\":[{\"value\":null,\"version\":0}],\"varname_nodes\":{\"input\":[{\"idx\":1,\"version\":1},{\"idx\":2,\"version\":1},{\"idx\":3,\"version\":1}],\"out\":[{\"idx\":4,\"version\":1},{\"idx\":5,\"version\":1},{\"idx\":6,\"version\":1}],\"predicate_0_filter\":[{\"idx\":9,\"version\":1}]}}\n",
            );
            let mut sg_1v1_node_7v1_stream = {
                #[inline(always)]
                fn check_stream<
                    Stream: hydroflow::futures::stream::Stream<Item = Item>,
                    Item,
                >(
                    stream: Stream,
                ) -> ::std::pin::Pin<
                    ::std::boxed::Box<
                        impl hydroflow::futures::stream::Stream<Item = Item>,
                    >,
                > {
                    ::std::boxed::Box::pin(stream)
                }
                check_stream(input)
            };
            let sg_1v1_node_2v1_uniquedata = df
                .add_state(
                    ::std::cell::RefCell::new(
                        hydroflow::lang::monotonic_map::MonotonicMap::<
                            _,
                            ::std::collections::HashSet<_>,
                        >::default(),
                    ),
                );
            let sg_1v1_node_5v1_uniquedata = df
                .add_state(
                    ::std::cell::RefCell::new(
                        hydroflow::lang::monotonic_map::MonotonicMap::<
                            _,
                            ::std::collections::HashSet<_>,
                        >::default(),
                    ),
                );
            df.add_subgraph_stratified(
                "Subgraph GraphSubgraphId(1v1)",
                0,
                var_expr!(),
                var_expr!(),
                move |context, var_args!(), var_args!()| {
                    let op_7v1 = std::iter::from_fn(|| {
                        match hydroflow::futures::stream::Stream::poll_next(
                            sg_1v1_node_7v1_stream.as_mut(),
                            &mut std::task::Context::from_waker(&context.waker()),
                        ) {
                            std::task::Poll::Ready(maybe) => maybe,
                            std::task::Poll::Pending => None,
                        }
                    });
                    let op_7v1 = {
                        #[inline(always)]
                        pub fn check_op_7v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_7v1(op_7v1)
                    };
                    let op_1v1 = {
                        #[allow(unused)]
                        #[inline(always)]
                        fn check_inputs<
                            A: ::std::iter::Iterator<Item = Item>,
                            B: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(a: A, b: B) -> impl ::std::iter::Iterator<Item = Item> {
                            a.chain(b)
                        }
                        op_7v1
                    };
                    let op_1v1 = {
                        #[inline(always)]
                        pub fn check_op_1v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_1v1(op_1v1)
                    };
                    let op_2v1 = op_1v1
                        .filter(|item| {
                            let mut borrow = context
                                .state_ref(sg_1v1_node_2v1_uniquedata)
                                .borrow_mut();
                            let set = borrow
                                .try_insert_with(
                                    (context.current_tick(), context.current_stratum()),
                                    ::std::collections::HashSet::new,
                                );
                            if !set.contains(item) {
                                set.insert(::std::clone::Clone::clone(item));
                                true
                            } else {
                                false
                            }
                        });
                    let op_2v1 = {
                        #[inline(always)]
                        pub fn check_op_2v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_2v1(op_2v1)
                    };
                    let op_3v1 = op_2v1;
                    let op_3v1 = {
                        #[inline(always)]
                        pub fn check_op_3v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_3v1(op_3v1)
                    };
                    let op_9v1 = op_3v1
                        .filter(|&row: &(_, _)| row.0 > row.1 && row.1 == row.0);
                    let op_9v1 = {
                        #[inline(always)]
                        pub fn check_op_9v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_9v1(op_9v1)
                    };
                    let op_10v1 = op_9v1.map(|row: (_, _)| (row.0, row.1));
                    let op_10v1 = {
                        #[inline(always)]
                        pub fn check_op_10v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_10v1(op_10v1)
                    };
                    let op_4v1 = {
                        #[allow(unused)]
                        #[inline(always)]
                        fn check_inputs<
                            A: ::std::iter::Iterator<Item = Item>,
                            B: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(a: A, b: B) -> impl ::std::iter::Iterator<Item = Item> {
                            a.chain(b)
                        }
                        op_10v1
                    };
                    let op_4v1 = {
                        #[inline(always)]
                        pub fn check_op_4v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_4v1(op_4v1)
                    };
                    let op_5v1 = op_4v1
                        .filter(|item| {
                            let mut borrow = context
                                .state_ref(sg_1v1_node_5v1_uniquedata)
                                .borrow_mut();
                            let set = borrow
                                .try_insert_with(
                                    (context.current_tick(), context.current_stratum()),
                                    ::std::collections::HashSet::new,
                                );
                            if !set.contains(item) {
                                set.insert(::std::clone::Clone::clone(item));
                                true
                            } else {
                                false
                            }
                        });
                    let op_5v1 = {
                        #[inline(always)]
                        pub fn check_op_5v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_5v1(op_5v1)
                    };
                    let op_6v1 = op_5v1;
                    let op_6v1 = {
                        #[inline(always)]
                        pub fn check_op_6v1<
                            Input: ::std::iter::Iterator<Item = Item>,
                            Item,
                        >(input: Input) -> impl ::std::iter::Iterator<Item = Item> {
                            input
                        }
                        check_op_6v1(op_6v1)
                    };
                    let op_8v1 = hydroflow::pusherator::for_each::ForEach::new(|v| {
                        out.send(v).unwrap()
                    });
                    let op_8v1 = {
                        #[inline(always)]
                        pub fn check_op_8v1<
                            Input: hydroflow::pusherator::Pusherator<Item = Item>,
                            Item,
                        >(
                            input: Input,
                        ) -> impl hydroflow::pusherator::Pusherator<Item = Item> {
                            input
                        }
                        check_op_8v1(op_8v1)
                    };
                    #[inline(always)]
                    fn check_pivot_run<
                        Pull: ::std::iter::Iterator<Item = Item>,
                        Push: hydroflow::pusherator::Pusherator<Item = Item>,
                        Item,
                    >(pull: Pull, push: Push) {
                        hydroflow::pusherator::pivot::Pivot::new(pull, push).run();
                    }
                    check_pivot_run(op_6v1, op_8v1);
                },
            );
            df
        }
    }
}

